--- a/Remove/index.html
+++ b/Remove/index.html
@@ -19,9 +19,9 @@
         </div>
         <div id="secondInput">
             <button id="newRandomNumber">New random number</button>
-            <input type="text" id="grid">
+            <input type="text" id="addInput">
             <button id="remove">Remove</button>
-            <input type="text" name="" id="">
+            <input type="text" name="" id="removeInput">
         </div>
     </header>
     <script src="../common.js"></script>
