--- a/AddUpTo/index.html
+++ b/AddUpTo/index.html
@@ -19,8 +19,8 @@
         </div>
         <div id="secondInput">
             <label for="add">Add up to:</label>
-            <input type="text" name="" id="add">
-            <button>Find two cells that add up</button>
+            <input type="text" name="" id="sumOfTwoCells">
+            <button id="findButton">Find two cells that add up</button>
         </div>
     </header>
     <script src="../common.js"></script>
