--- a/FindSame/index.html
+++ b/FindSame/index.html
@@ -18,7 +18,7 @@
             <button id="create">Create</button>
         </div>
         <div id="secondInput">
-            <label for="">Click on a number to find copies</label>
+            <label for="" id="textBox">Click on a number to find copies</label>
             <button id="reset">Reset</button>
         </div>
     </header>
