--- a/Sum/index.html
+++ b/Sum/index.html
@@ -19,11 +19,12 @@
         </div>
         <div id="secondInput">
             <label for="sum">Sum of all:</label>
-            <input type="text" id="sum">
+            <input type="text" id="sumOfAll">
         </div>
         <div id="thirdInput">
             <label for="sum">Sum of marked:</label>
-            <input type="text" id="sum">
+            <input type="text" id="sumOfMarked">
+            <button id="resetSum">Reset</button>
         </div>
     </header>
     <script src="../common.js"></script>
