--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
-    <a href="Remove/index.html">Remove</a>
-    <a href="Sum/index.html">Sum</a>
-    <a href="Repetitions/index.html">Repetitions</a>
-    <a href="Clear/index.html">Clear</a>
-    <a href="FindSame/index.html">Find same</a>
-    <a href="AddUpTo/index.html">Add up to</a>
+    <div id="linksBox">
+        <a href="Remove/index.html">Remove</a>
+        <a href="Sum/index.html">Sum</a>
+        <a href="Repetitions/index.html">Repetitions</a>
+        <a href="Clear/index.html">Clear</a>
+        <a href="FindSame/index.html">Find same</a>
+        <a href="AddUpTo/index.html">Add up to</a>
+    </div>
 </body>
 
 </html>
