--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 
 <body>
     <div id="linksBox">
-        <a href="Remove/index.html">Remove</a>
-        <a href="Sum/index.html">Sum</a>
-        <a href="Repetitions/index.html">Repetitions</a>
-        <a href="Clear/index.html">Clear</a>
-        <a href="FindSame/index.html">Find same</a>
-        <a href="AddUpTo/index.html">Add up to</a>
+        <div>
+            <a href="Remove/index.html">Remove</a>
+            <a href="Sum/index.html">Sum</a>
+            <a href="Repetitions/index.html">Repetitions</a>
+            <a href="Clear/index.html">Clear</a>
+            <a href="FindSame/index.html">Find same</a>
+            <a href="AddUpTo/index.html">Add up to</a>
+        </div>
+        <div id="lowerLinks">
+            <a href="https://github.com/Sebastianrosberg/DDU2-Projekt">Github</a>
+            <a href="https://webshare.mah.se/aq3404/projekt/">Webbsida</a>
+        </div>
     </div>
 </body>
 
